[gd_scene load_steps=21 format=2]

[ext_resource path="res://Personaje/Principal/tile004.png" type="Texture" id=1]
[ext_resource path="res://Personaje/Principal/tile017.png" type="Texture" id=2]
[ext_resource path="res://Personaje/Principal/tile016.png" type="Texture" id=3]
[ext_resource path="res://Personaje/Principal/tile020.png" type="Texture" id=4]
[ext_resource path="res://Personaje/Principal/tile018.png" type="Texture" id=5]
[ext_resource path="res://Personaje/Principal/tile003.png" type="Texture" id=6]
[ext_resource path="res://Personaje/Principal/tile019.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Other stuff/orb.tscn" type="PackedScene" id=8]
[ext_resource path="res://Personaje/Principal/tile021.png" type="Texture" id=9]
[ext_resource path="res://Personaje/Principal/tile083.png" type="Texture" id=10]
[ext_resource path="res://Personaje/Principal/tile084.png" type="Texture" id=12]
[ext_resource path="res://Personaje/Principal/tile080.png" type="Texture" id=17]
[ext_resource path="res://Personaje/Principal/tile085.png" type="Texture" id=19]
[ext_resource path="res://Personaje/Principal/tile002.png" type="Texture" id=21]
[ext_resource path="res://Personaje/Principal/tile000.png" type="Texture" id=22]
[ext_resource path="res://Personaje/Principal/tile001.png" type="Texture" id=24]
[ext_resource path="res://Personaje/Principal/tile086.png" type="Texture" id=25]
[ext_resource path="res://Scripts/KinematicBody2D.gd" type="Script" id=26]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 24 ), ExtResource( 21 ), ExtResource( 6 ), ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 4.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "WallJumpJump",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "WallJumpWall",
"speed": 2.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 9 ) ],
"loop": true,
"name": "Correr",
"speed": 8.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 12 ), ExtResource( 19 ), ExtResource( 25 ) ],
"loop": true,
"name": "Jump",
"speed": 10.0
} ]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 8.63, 13.405, -8.678, 13.405, -8.547, -3.561, 0.124, -14.738, 8.456, -3.703 )

[node name="Player" type="Node2D"]

[node name="Node2D" type="Node2D" parent="."]

[node name="Orb" parent="Node2D" instance=ExtResource( 8 )]
script = null

[node name="Player" type="KinematicBody2D" parent="."]
script = ExtResource( 26 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
position = Vector2( 2.06413, -2.87184 )
frames = SubResource( 1 )
animation = "Correr"
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
visible = false
position = Vector2( 2.60911, 7.78044 )
shape = SubResource( 2 )

[node name="RayCastLeft" type="RayCast2D" parent="Player"]
visible = false
position = Vector2( 3, 7 )
enabled = true
cast_to = Vector2( -11.2, 0 )

[node name="RayCastRight" type="RayCast2D" parent="Player"]
visible = false
position = Vector2( 3, 7 )
enabled = true
cast_to = Vector2( 11.2, 0 )

[node name="Camera2D" type="Camera2D" parent="Player"]
visible = false
position = Vector2( 2, -20 )
current = true
zoom = Vector2( 0.5, 0.5 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 6.0
drag_margin_left = 0.21
drag_margin_top = 0.21
drag_margin_right = 0.21
drag_margin_bottom = 0.21
editor_draw_limits = true
editor_draw_drag_margin = true
[connection signal="body_entered" from="Node2D/Orb" to="Player" method="_on_Orb_body_entered"]
